fixed name and remove auth

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       </div>
       <div id="title" class="nav-item flex-box">
         <span>Mathematics</span>
-        <span>for</span>
-        <span>Everyone</span>
+        <span>lover</span>
+        <span>club</span>
       </div>
-      <div id="auth-box" class="nav-item flex-box">
+      <!--div id="auth-box" class="nav-item flex-box">
         <span class="auth-items" id="log-in">Login</span>
         <span class="auth-items" id="sign-up">sign-up</span>
-      </div>
+      </div-->
     </nav>
     <div class="menu-box" id="academic-box"></div>
   </body>
