deleted comment to master pull/puch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script src="./script/container.js"></script>
-
+Please do not read this page
     GO TO <ul>
       <li><a href="./topic/NumberTheory/trick.html">Tricks to solve linear Diophantine Equation</a></li>
       <li><a href="./topic//NumberTheory/exponents.html">Exponents</a></li>
