mastering push pull

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="./topic/NumberTheory/trick.html">Tricks to solve linear Diophantine Equation</a></li>
       <li><a href="./topic//NumberTheory/exponents.html">Exponents</a></li>
     </ul>
-
+The following lines are not to read for readers
     <h1>Important To Fix (Bugs)</h1>
     <h2>MathJax (Done)</h2>
     <p>
