--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <script src="./script/container.js"></script>
 
-    GO TO <ul>
+    <ul>Written Articles
       <li><a href="./topic/NumberTheory/trick.html">Tricks to solve linear Diophantine Equation</a></li>
       <li><a href="./topic//NumberTheory/exponents.html">Exponents</a></li>
     </ul>
