--- a/topic/NumberTheory/trick.html
+++ b/topic/NumberTheory/trick.html
@@ -20,7 +20,7 @@
       };
     </script>
     <script
-      src="/node_modules/mathjax-full/es5/tex-svg.js"
+      src="/mathjax/es5/tex-svg.js"
       id="MathJax-script"
       defer
     ></script>
