--- a/topic/NumberTheory/exponents.html
+++ b/topic/NumberTheory/exponents.html
@@ -17,7 +17,7 @@
       };
     </script>
     <script
-      src="/node_modules/mathjax-full/es5/tex-svg.js"
+      src="/mathjax/es5/tex-svg.js"
       id="MathJax-script"
       defer
     ></script>
