fix link for mathja

--- a/topic/NumberTheory/trick.html
+++ b/topic/NumberTheory/trick.html
@@ -19,11 +19,7 @@
         },
       };
     </script>
-    <script
-      src="/node_modules/mathjax-full/es5/tex-svg.js"
-      id="MathJax-script"
-      defer
-    ></script>
+    <script src="/mathjax/es5/tex-svg.js" id="MathJax-script" defer></script>
   </head>
   <body>
     <script src="/script/container.js"></script>
