--- a/topic/NumberTheory/trick.html
+++ b/topic/NumberTheory/trick.html
@@ -19,7 +19,10 @@
         },
       };
     </script>
-    <script src="/mathjax/es5/tex-svg.js" id="MathJax-script" defer></script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+    <!--script src="/mathjax/es5/tex-svg.js" id="MathJax-script" defer></scrip-->
   </head>
   <body>
     <script src="/script/container.js"></script>
